# camoufox-captcha

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
camoufox_captcha/: __init__.py
camoufox_captcha/cloudflare/: solve_by_click.py
camoufox_captcha/cloudflare/utils/: detection.py  dom_helpers.py
camoufox_captcha/common/: detection.py  shadow_root.py
examples/cloudflare/: interstitial.py  turnstile.py
tests/integration/cloudflare/: test_integration_cf_solve_by_click.py
tests/unit/: test_solve_captcha.py
tests/unit/cloudflare/: test_cf_detection.py  test_cf_dom_helpers.py  test_unit_cf_solve_by_click.py
tests/unit/common/: test_common_detection.py  test_common_shadow_root.py
