[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "camoufox-captcha"
version = "0.1.3"
description = "Automatic captcha solving using Camoufox"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "techinz", email = "contact@techinz.dev" }
]
dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1",
]

[project.urls]
Homepage = "https://github.com/techinz/camoufox-captcha"
Repository = "https://github.com/techinz/camoufox-captcha"
Issues = "https://github.com/techinz/camoufox-captcha/issues"